Add upload page

--- a/views/index.html
+++ b/views/index.html
@@ -11,6 +11,7 @@
     <li><a href="/hello">res.render</a></li>
     <li><a href="/json">res.json</a></li>
     <li><a href="/raise_error">raise error</a></li>
+    <li><a href="/upload">upload photo</a></li>
     <li><a href="/stolen">Stolen password</a></li>
     <li><a href="/login">login</a></li>
     <li>Demo CSFR
